Bug 1140486 patch 1 - Pass block frame instead of block reflow state to nsTextFrame::RecomputeOverflow.  r=jfkthame

This allows calling it from UpdateOverflow in patch 2.